# k_mismatch_sus_finding

./: CMakeLists.txt  README
data/primates/: C.aethiops.fa  C.albifrons.fa  C.guereza.fa  C.pygerythrus.fa  C.sabaeus.fa  C.tantalus.fa  C.variegatus.fa  H.lar.fa  L.catta.fa  M.mulatta.fa  N.coucang.fa  N.larvatus.fa  P.badius.fa  P.hamadryas.fa  P.melalophos.fa  P.nemaeus.fa  P.pygmaeus.fa  P.roxellana.fa  S.entellus.fa  T.bancanus.fa  T.obscurus.fa  primates.full.fas
data/roseobacter/: ref-clade-1.txt  ref-clade-2.txt  ref-clade-3.txt  ref-clade-4.txt  ref-tree-alias-quotes.txt  ref-tree.txt  roseobacter.clade1.tree  roseobacter.clade2.fas  roseobacter.clade2.tree  roseobacter.clade3.fas  roseobacter.clade3.tree  roseobacter.clade4.fas  roseobacter.clade4.tree  roseobacter.full.fas  roseobacter.full.tree
data/test/: myTest.fas
src/: AppConfig.cpp  AppConfig.hpp  ExactLCPk.cpp  ExactLCPk.hpp  HeuristicLCPk.cpp  HeuristicLCPk.hpp  NaiveLCPk.cpp  NaiveLCPk.hpp  ReadsDB.cpp  ReadsDB.hpp  compute_kacs.cpp  compute_kacs.hpp  compute_klcp.cpp  compute_klcp.hpp  defs.hpp  main.cpp  util.hpp
src/sdsl/: construct_sa.hpp  rmq_support_sparse_table.hpp
test/: banana.fa  klcp_banana_test.cpp  klcp_dword_test.cpp  klcp_heuristic_test.cpp  klcp_primates_test.cpp  t1.fa  t2.fa  util.py
